--- a/src/pages/blog/1.md
+++ b/src/pages/blog/1.md
@@ -1,3 +1,13 @@
+<!---
+"title": "git（码云）仓库的使用",
+"author": "NanKe",
+"describe": "git（码云）仓库的使用",
+"update": "2021-5-13",
+"readTime": "2min",
+"type": "编程",
+"fileName": "1"
+--->
+
 # git（码云）仓库的使用
 
 ``` js
@@ -52,7 +62,7 @@ git pull origin master --allow-unrelated-histories
 2.忽略文件.gitignore更新的时候
 
 git  rm -r --cached .
-``` 
+```
 
 ### 三、工作时使用git的命令
 
