--- a/src/pages/blog/3.md
+++ b/src/pages/blog/3.md
@@ -1,3 +1,12 @@
+<!---
+"title": "ES6和ES5（面向对象编程）",
+"author": "NanKe",
+"describe": "ES6和ES5（面向对象编程）",
+"update": "2021-5-16",
+"readTime": "2min",
+"type": "编程",
+"fileName": "3"
+--->
 # 一、ES6和ES5（面向对象编程）
 
 ### 1.面向对象编程（类和对象）
