--- a/src/pages/blog/2.md
+++ b/src/pages/blog/2.md
@@ -1,3 +1,13 @@
+<!---
+"title": "js中的算法思想",
+"author": "NanKe",
+"describe": "js中的算法思想",
+"update": "2021-5-14",
+"readTime": "2min",
+"type": "编程",
+"fileName": "2"
+--->
+
 # js中的算法思想
 
 ## 一、递归函数
@@ -98,4 +108,3 @@ console.log(getID(data, 111));
  deepCopy(o, obj);
  console.log(o);
 ```
-
