--- a/src/content/1.md
+++ b/src/content/1.md
@@ -1,12 +1,12 @@
-<!---
-"title": "git（码云）仓库的使用",
-"author": "NanKe",
-"describe": "git（码云）仓库的使用",
-"update": "2021-5-13",
-"readTime": "2min",
-"type": "编程",
-"fileName": "1"
---->
+---
+title: git（码云）仓库的使用
+author: NanKe
+describe: git（码云）仓库的使用
+update: 2021-5-13
+readTime: 2min
+type: 编程
+fileName: 1
+---
 
 # git（码云）仓库的使用
 
@@ -44,7 +44,7 @@ git remote add origin 仓库地址（没有添加ssh key建议使用 https地址
 5.将远程仓库拉取到本地仓库（合并远程仓库，当远程仓库被其他人修改时必须）
 
 git pull origin master 
-6.执行第5步是可能会有文件冲突,下面命令是可以查看冲突，人为解决冲突后，从第2步重新执行
+6.执行第5步是可能会有文件冲突下面命令是可以查看冲突，人为解决冲突后，从第2步重新执行
 git status
 
 7.将本地仓库上传到远程仓库（更新远程仓库）
@@ -73,3 +73,4 @@ git pull origin master
 如果有冲突，解决完冲突需要重新添加提交
 git push origin master 
 ```
+
