--- a/src/content/2.md
+++ b/src/content/2.md
@@ -1,12 +1,12 @@
-<!---
-"title": "js中的算法思想",
-"author": "NanKe",
-"describe": "js中的算法思想",
-"update": "2021-5-14",
-"readTime": "2min",
-"type": "编程",
-"fileName": "2"
---->
+---
+title: js中的算法思想
+author: NanKe
+describe: js中的算法思想
+update: 2021-5-14
+readTime: 2min
+type: 编程
+fileName: 2
+---
 
 # js中的算法思想
 
