--- a/src/content/3.md
+++ b/src/content/3.md
@@ -1,12 +1,12 @@
-<!---
-"title": "ES6和ES5（面向对象编程）",
-"author": "NanKe",
-"describe": "ES6和ES5（面向对象编程）",
-"update": "2021-5-16",
-"readTime": "2min",
-"type": "编程",
-"fileName": "3"
---->
+---
+title: ES6和ES5（面向对象编程）
+author: NanKe
+describe: ES6和ES5（面向对象编程）
+update: 2021-5-16
+readTime: 2min
+type: 编程
+fileName: 3
+---
 # 一、ES6和ES5（面向对象编程）
 
 ### 1.面向对象编程（类和对象）
@@ -57,13 +57,13 @@ class  Student extends Person {       // 子类继承父类
 
 <font  color="red">  注意: 子类在构造函数中使用super, 必须放到 this 前面  (必须先调用父类的构造方法,在使用子类构造方法) </font>
 
-<font color=red>1.在 ES6 中类没有变量提升，所以必须先定义类，才能通过类实例化对象.</font>
+<font  color="red">1.在 ES6 中类没有变量提升，所以必须先定义类，才能通过类实例化对象.</font>
 
-<font color=red>2.类里面的共有属性和方法一定要加this使用.</font>
+<font  color="red">2.类里面的共有属性和方法一定要加this使用.</font>
 
-<font color=red>3.类里面的this指向问题. </font>
+<font   color="red">3.类里面的this指向问题. </font>
 
-<font color=red>4.constructor 里面的this指向实例对象, 方法里面的this 指向这个方法的调用者 </font>
+<font   color="red">4.constructor 里面的this指向实例对象, 方法里面的this 指向这个方法的调用者 </font>
 
 ## 3.构造函数(E5的方法)
 
