--- a/src/content/4.md
+++ b/src/content/4.md
@@ -1,23 +1,21 @@
-<!---
-"title": "用原生js写的离线的TODOLIST",
-"author": "NanKe",
-"describe": "用原生js写的离线的TODOLIST",
-"update": "2021-6-1",
-"readTime": "2min",
-"type": "编程",
-"fileName": "4"
---->
+---
+title: 用原生js写的离线的TODOLIST
+author: NanKe
+describe: 用原生js写的离线的TODOLIST
+update: 2021-6-1
+readTime: 2min
+type: 编程
+fileName: 4
+---
 
 
 
 # 用原生js写的离线的TODOLIST
 ![运行效果图](https://img-blog.csdnimg.cn/20210510203326449.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NTc3NjA3MA==,size_16,color_FFFFFF,t_70#pic_center)
 
-```html
-
-
 ### 1.HTML代码
 
+```html
 ​```html
 <!DOCTYPE html>
 <html lang="en">
