--- a/src/content/5.md
+++ b/src/content/5.md
@@ -1,12 +1,12 @@
-<!---
-"title": "后台权限管理系统",
-"author": "NanKe",
-"describe": "React+Express的后台权限管理系统",
-"update": "2022-4-5",
-"readTime": "2min",
-"type": "编程",
-"fileName": "5"
---->
+---
+title: 后台权限管理系统
+author: NanKe
+describe: React+Express的后台权限管理系统
+update: 2022-4-5
+readTime: 2min
+type: 编程
+fileName: 5
+---
 
 # 后台权限管理系统
 
