--- a/src/content/6.md
+++ b/src/content/6.md
@@ -1,12 +1,12 @@
-<!---
-"title": "大学生毕设小demo",
-"author": "NanKe",
-"describe": "大学生毕设小demo",
-"update": "2022-5-1",
-"readTime": "2min",
-"type": "编程",
-"fileName": "6"
---->
+---
+title: 大学生毕设小demo
+author: NanKe
+describe: 大学生毕设小demo
+update: 2022-5-1
+readTime: 2min
+type: 编程
+fileName: 6
+---
 
 # 大学生毕设小demo
 
