--- a/src/content/7.md
+++ b/src/content/7.md
@@ -1,12 +1,12 @@
-<!---
-"title": "QQ聊天功能Springboot(websocket)的实现",
-"author": "NanKe",
-"describe": "QQ聊天功能Springboot(websocket)的实现",
-"update": "2022-5-1",
-"readTime": "2min",
-"type": "编程",
-"fileName": "7"
---->
+---
+title: QQ聊天功能Springboot(websocket)的实现
+author: NanKe
+describe: QQ聊天功能Springboot(websocket)的实现
+update: 2022-5-1
+readTime: 2min
+type: 编程
+fileName: 7
+---
 
 # QQ聊天功能Springboot(websocket)的实现
 
