--- a/src/content/8.md
+++ b/src/content/8.md
@@ -1,12 +1,12 @@
-<!---
-"title": "React实现配置化Tree树形控件",
-"author": "NanKe",
-"describe": "React实现配置化Tree树形控件",
-"update": "2022-5-16",
-"readTime": "2min",
-"type": "编程",
-"fileName": "8"
---->
+---
+title: React实现配置化Tree树形控件
+author: NanKe
+describe: React实现配置化Tree树形控件
+update: 2022-5-16
+readTime: 2min
+type: 编程
+fileName: 8
+---
 
 # React实现配置化Tree树形控件
 
