--- a/src/content/9.md
+++ b/src/content/9.md
@@ -1,20 +1,17 @@
-<!---
-"title": "小程序云开发一次性订阅（记录次数）功能实现",
-"author": "NanKe",
-"describe": "小程序云开发一次性订阅（记录次数）功能实现",
-"update": "2022-8-15",
-"readTime": "2min",
-"type": "编程",
-"fileName": "9"
---->
+---
+title: 小程序云开发一次性订阅（记录次数）功能实现
+author: NanKe
+describe: 小程序云开发一次性订阅（记录次数）功能实现
+update: 2022-8-15
+readTime: 2min
+type: 编程
+fileName: 9
+---
 
 ## 小程序云开发一次性订阅（记录次数）功能实现
 
 项目源码链接：[https://pan.baidu.com/s/1SxwMPoA6xgUwqn3O_Wpvrg](https://pan.baidu.com/s/1SxwMPoA6xgUwqn3O_Wpvrg) 
 提取码：6630
-
-产品展示
-![在这里插入图片描述](https://img-blog.csdnimg.cn/e9a43148ffe945238cfa9b6e8a0292e1.gif)
 
 
 ### 1.问题需求分析
