--- a/src/content/10.md
+++ b/src/content/10.md
@@ -81,12 +81,13 @@ function MyApp({ Component, pageProps }) {
 export default MyApp
 ```
 ###### 2.在blog/[name].js中
-2.1通过getStaticProps在服务器使用fs模块运行读取content文件目录下的md文件内容
-2.2配置MDX各种插件
-2.3在通过MDXRemote将文件内容渲染出来
-2.4通过插件获取到元数据和目录
-2.5在组件prop中获取到内容
-2.6通过自定义组件TableContents生成自己的目录
+1. 通过getStaticProps在服务器使用fs模块运行读取content文件目录下的md文件内容
+2. 配置MDX各种插件
+3. 在通过MDXRemote将文件内容渲染出来
+4. 通过插件获取到元数据和目录
+5. 在组件prop中获取到内容
+6. 
+   通过自定义组件TableContents生成自己的目录
 
 ```javascript
 import { serialize } from 'next-mdx-remote/serialize'
@@ -199,9 +200,9 @@ export default function TableContents(props) {
 
 ```
 ###### 3.引入CSS样式
-在_app.js中
-markdown样式可自行设计
-prism官网代码高亮样式[点击链接下载](https://prismjs.com/)
+- 在_app.js中
+- markdown样式可自行设计
+- prism官网代码高亮样式[点击链接下载](https://prismjs.com/)
 
 ```javascript
 import '../styles/prism.css'
