--- a/src/content/10.md
+++ b/src/content/10.md
@@ -11,7 +11,7 @@ fileName: 10
 ## nextjs+MDX渲染md文件并生成目录
 
 #### 一、效果展示
-线上网站：[点击体验](https://blog.nankezs.cn/)
+线上网站：[点击体验](https://www.nankezs.cn/)
 md文件
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/e111f4bdd6d64f93beba0a0c7c9421a7.png)
 
